--- a/css/sass/tools/_variables.sass
+++ b/css/sass/tools/_variables.sass
@@ -17,3 +17,6 @@ $grid-bpoints: ("xs": 0, "sm": 576px, "md": 768px, "lg": 992px,"xl": 1170px,"xxl
 
 /*NAVBAR*/
 $navbar-height : 120px
+
+/*CARD*/
+$avatar: 75px
