--- a/css/style.sass
+++ b/css/style.sass
@@ -1,9 +1,10 @@
 @import sass/tools/_variables
+@import sass/tools/_mixins
 
 @import sass/general/_reset
 @import sass/general/_flux
 @import sass/general/_body
 @import sass/general/_header
 @import sass/general/_footer
-// @import sass/components/_xxx
-// @import sass/components/_xxx
+@import sass/components/_main_aside
+@import sass/components/_main_section
