--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,70 @@ h1 {
     height: auto;
   }
 }
+footer {
+  min-height: 120px;
+  padding-bottom: 40px;
+}
+
+.footer__menu, .footer-link__tips {
+  width: 100%;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+.footer__menu li, .footer-link__tips li {
+  padding-top: 8px;
+}
+.footer__menu li hr, .footer-link__tips li hr {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.footer__menu {
+  padding-top: 40px;
+}
+.footer-menu__link {
+  text-decoration: none;
+  color: #efd4e2;
+}
+
+.footer-menu__link:hover {
+  text-decoration: underline;
+  color: #efd4e2;
+}
+
+.footer__link, .footer-link__tips {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer__link {
+  padding-right: 40px;
+}
+
+.footer-link__tips {
+  font-size: 0.8rem;
+}
+.footer-link__tips li:first-child {
+  margin-right: 5px;
+}
+.footer-link__tips li:last-child {
+  margin-left: 5px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  .footer__menu li:first-child {
+    padding-top: 8px;
+  }
+  .footer__menu hr {
+    display: none;
+  }
+}
 .activites__menu {
   display: flex;
   flex-direction: column;
