Modifications des classes .activites__main et __contacts dans _main_section.sass, ajout padding 8 px

--- a/css/sass/components/_main_section.sass
+++ b/css/sass/components/_main_section.sass
@@ -4,9 +4,10 @@
    text-align: end
    align-content: flex-end
    font-size: $fs-presentation
+   padding: map-get($list-spacing, "lg")
 
 .activites__main
-   padding: map-get($list-spacing, "std")
+   padding: map-get($list-spacing, "lg")
    display: flex
    justify-content: center
    align-content: center
